--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@astrojs/partytown": "^2.0.4",
     "@astrojs/tailwind": "5.1.0",
     "@eslint/js": "^9.0.0",
+    "@iconify-json/bi": "^1.1.23",
     "@iconify-json/flat-color-icons": "^1.1.10",
     "@iconify-json/tabler": "^1.1.110",
     "@playform/compress": "0.0.3",
