fixed other path

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,7 +1,7 @@
 site:
   name: Mark Mansour
   site: 'https://stateofflux.com'
-  base: '/astrowind'
+  base: '/'
   trailingSlash: false
 
   googleSiteVerificationId: null
