Using domain aboutmarkmansour.com

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,6 +1,6 @@
 site:
   name: Mark Mansour
-  site: 'https://stateofflux.com'
+  site: 'https://aboutmarkmansour.com'
   # base: '/'
   trailingSlash: false
 
