--- a/src/config.yaml
+++ b/src/config.yaml
@@ -11,7 +11,7 @@ metadata:
   title:
     default: Mark Mansour's Personal Website
     template: '%s — Mark Mansour'
-  description: "Software Executive of internet-scale systems"
+  description: 'Software Executive of internet-scale systems'
   robots:
     index: true
     follow: true
@@ -66,7 +66,7 @@ apps:
 analytics:
   vendors:
     googleAnalytics:
-      id: "G-LX1YK0T3VC" # or null
+      id: 'G-LX1YK0T3VC' # or null
 
 ui:
   theme: 'system' # Values: "system" | "light" | "dark" | "light:only" | "dark:only"
